Fixed button spacing when in column

--- a/css/queries.css
+++ b/css/queries.css
@@ -167,12 +167,20 @@
 /* 544px*/
 
 @media (max-width: 34em) {
+  html {
+    font-size: 50%;
+  }
+
   .grid {
     row-gap: 4.8rem;
   }
 
   .header {
     padding: 0 3.2rem;
+  }
+
+  .btn{
+    margin-bottom: 2.4rem;
   }
 
   .hero-img {
